UX improv: make link coincide with the wrapper button to avoid clicking on a part of the button not covered by the link

--- a/assets/index.css
+++ b/assets/index.css
@@ -36,3 +36,8 @@ tbody tr:hover {
 .success-msg {
     color: green;
 }
+
+#create-check-btn {
+    padding: 0;
+    border-radius: 0;
+}
